# hjbar.github.io

./: README.md  contact.html  culture.html  index.html  internship.html  media.html  publi.html  stone-deps.opam  stone.toml
.github/workflows/: publish-pages.yml
pages/: contact.md  culture.md  games.md  index.md  internship.md  media.md  publi.md
pages/games/: asteroids.md  games.md
pages/games/prog/: game_js.bc.js
pages/static/: style.css
static/: style.css
templates/: template.html
website/: config.stone
website/data/: style.css  template.html
website/pages/: culture.md  index.md  media.md
