opam-version: "2.0"
name: "stone-deps"
version: "0.1"

maintainer: "hjbar@protonmail.com"
authors: "hjbar"
homepage: "https://hjbar.com"
bug-reports: "https://github.com/hjbar/hjbar.github.io/issues"
license: "MIT"

synopsis: "To install Stone"
description: "To install Stone"

depends: [
  "stone"
]
